[metadata]
name = guessinggame
version = 0.1.0
author = Jacque Jones
author_email = sey91mone@ksu.edu
description = A fun guessing game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KSU-CC-410-Spring-2024/11-releases-python-qwayy
    Bug Tracker = https://github.com/KSU-CC-410-Spring-2024/11-releases-python-qwayy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
guessinggame = py.typed